twilio/rest/ip_messaging/v2/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.10.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**CreateChannel**](docs/DefaultApi.md#createchannel) | **Post** /v2/Services/{ServiceSid}/Channels | 
*DefaultApi* | [**CreateChannelWebhook**](docs/DefaultApi.md#createchannelwebhook) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks | 
*DefaultApi* | [**CreateCredential**](docs/DefaultApi.md#createcredential) | **Post** /v2/Credentials | 
*DefaultApi* | [**CreateInvite**](docs/DefaultApi.md#createinvite) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*DefaultApi* | [**CreateMember**](docs/DefaultApi.md#createmember) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*DefaultApi* | [**CreateMessage**](docs/DefaultApi.md#createmessage) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*DefaultApi* | [**CreateRole**](docs/DefaultApi.md#createrole) | **Post** /v2/Services/{ServiceSid}/Roles | 
*DefaultApi* | [**CreateService**](docs/DefaultApi.md#createservice) | **Post** /v2/Services | 
*DefaultApi* | [**CreateUser**](docs/DefaultApi.md#createuser) | **Post** /v2/Services/{ServiceSid}/Users | 
*DefaultApi* | [**DeleteBinding**](docs/DefaultApi.md#deletebinding) | **Delete** /v2/Services/{ServiceSid}/Bindings/{Sid} | 
*DefaultApi* | [**DeleteChannel**](docs/DefaultApi.md#deletechannel) | **Delete** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**DeleteChannelWebhook**](docs/DefaultApi.md#deletechannelwebhook) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*DefaultApi* | [**DeleteCredential**](docs/DefaultApi.md#deletecredential) | **Delete** /v2/Credentials/{Sid} | 
*DefaultApi* | [**DeleteInvite**](docs/DefaultApi.md#deleteinvite) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*DefaultApi* | [**DeleteMember**](docs/DefaultApi.md#deletemember) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**DeleteMessage**](docs/DefaultApi.md#deletemessage) | **Delete** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**DeleteRole**](docs/DefaultApi.md#deleterole) | **Delete** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**DeleteService**](docs/DefaultApi.md#deleteservice) | **Delete** /v2/Services/{Sid} | 
*DefaultApi* | [**DeleteUser**](docs/DefaultApi.md#deleteuser) | **Delete** /v2/Services/{ServiceSid}/Users/{Sid} | 
*DefaultApi* | [**DeleteUserBinding**](docs/DefaultApi.md#deleteuserbinding) | **Delete** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings/{Sid} | 
*DefaultApi* | [**DeleteUserChannel**](docs/DefaultApi.md#deleteuserchannel) | **Delete** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 
*DefaultApi* | [**FetchBinding**](docs/DefaultApi.md#fetchbinding) | **Get** /v2/Services/{ServiceSid}/Bindings/{Sid} | 
*DefaultApi* | [**FetchChannel**](docs/DefaultApi.md#fetchchannel) | **Get** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**FetchChannelWebhook**](docs/DefaultApi.md#fetchchannelwebhook) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*DefaultApi* | [**FetchCredential**](docs/DefaultApi.md#fetchcredential) | **Get** /v2/Credentials/{Sid} | 
*DefaultApi* | [**FetchInvite**](docs/DefaultApi.md#fetchinvite) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*DefaultApi* | [**FetchMember**](docs/DefaultApi.md#fetchmember) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**FetchMessage**](docs/DefaultApi.md#fetchmessage) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**FetchRole**](docs/DefaultApi.md#fetchrole) | **Get** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**FetchService**](docs/DefaultApi.md#fetchservice) | **Get** /v2/Services/{Sid} | 
*DefaultApi* | [**FetchUser**](docs/DefaultApi.md#fetchuser) | **Get** /v2/Services/{ServiceSid}/Users/{Sid} | 
*DefaultApi* | [**FetchUserBinding**](docs/DefaultApi.md#fetchuserbinding) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings/{Sid} | 
*DefaultApi* | [**FetchUserChannel**](docs/DefaultApi.md#fetchuserchannel) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 
*DefaultApi* | [**ListBinding**](docs/DefaultApi.md#listbinding) | **Get** /v2/Services/{ServiceSid}/Bindings | 
*DefaultApi* | [**ListChannel**](docs/DefaultApi.md#listchannel) | **Get** /v2/Services/{ServiceSid}/Channels | 
*DefaultApi* | [**ListChannelWebhook**](docs/DefaultApi.md#listchannelwebhook) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks | 
*DefaultApi* | [**ListCredential**](docs/DefaultApi.md#listcredential) | **Get** /v2/Credentials | 
*DefaultApi* | [**ListInvite**](docs/DefaultApi.md#listinvite) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*DefaultApi* | [**ListMember**](docs/DefaultApi.md#listmember) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*DefaultApi* | [**ListMessage**](docs/DefaultApi.md#listmessage) | **Get** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*DefaultApi* | [**ListRole**](docs/DefaultApi.md#listrole) | **Get** /v2/Services/{ServiceSid}/Roles | 
*DefaultApi* | [**ListService**](docs/DefaultApi.md#listservice) | **Get** /v2/Services | 
*DefaultApi* | [**ListUser**](docs/DefaultApi.md#listuser) | **Get** /v2/Services/{ServiceSid}/Users | 
*DefaultApi* | [**ListUserBinding**](docs/DefaultApi.md#listuserbinding) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Bindings | 
*DefaultApi* | [**ListUserChannel**](docs/DefaultApi.md#listuserchannel) | **Get** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels | 
*DefaultApi* | [**UpdateChannel**](docs/DefaultApi.md#updatechannel) | **Post** /v2/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**UpdateChannelWebhook**](docs/DefaultApi.md#updatechannelwebhook) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Webhooks/{Sid} | 
*DefaultApi* | [**UpdateCredential**](docs/DefaultApi.md#updatecredential) | **Post** /v2/Credentials/{Sid} | 
*DefaultApi* | [**UpdateMember**](docs/DefaultApi.md#updatemember) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**UpdateMessage**](docs/DefaultApi.md#updatemessage) | **Post** /v2/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**UpdateRole**](docs/DefaultApi.md#updaterole) | **Post** /v2/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**UpdateService**](docs/DefaultApi.md#updateservice) | **Post** /v2/Services/{Sid} | 
*DefaultApi* | [**UpdateUser**](docs/DefaultApi.md#updateuser) | **Post** /v2/Services/{ServiceSid}/Users/{Sid} | 
*DefaultApi* | [**UpdateUserChannel**](docs/DefaultApi.md#updateuserchannel) | **Post** /v2/Services/{ServiceSid}/Users/{UserSid}/Channels/{ChannelSid} | 


## Documentation For Models

 - [BindingBindingType](docs/BindingBindingType.md)
 - [ChannelChannelType](docs/ChannelChannelType.md)
 - [CreateChannelRequest](docs/CreateChannelRequest.md)
 - [CreateChannelWebhookRequest](docs/CreateChannelWebhookRequest.md)
 - [CreateCredentialRequest](docs/CreateCredentialRequest.md)
 - [CreateInviteRequest](docs/CreateInviteRequest.md)
 - [CreateMemberRequest](docs/CreateMemberRequest.md)
 - [CreateMessageRequest](docs/CreateMessageRequest.md)
 - [CreateRoleRequest](docs/CreateRoleRequest.md)
 - [CreateServiceRequest](docs/CreateServiceRequest.md)
 - [CreateUserRequest](docs/CreateUserRequest.md)
 - [CredentialPushService](docs/CredentialPushService.md)
 - [IpMessagingV2Credential](docs/IpMessagingV2Credential.md)
 - [IpMessagingV2Service](docs/IpMessagingV2Service.md)
 - [IpMessagingV2ServiceBinding](docs/IpMessagingV2ServiceBinding.md)
 - [IpMessagingV2ServiceChannel](docs/IpMessagingV2ServiceChannel.md)
 - [IpMessagingV2ServiceChannelChannelWebhook](docs/IpMessagingV2ServiceChannelChannelWebhook.md)
 - [IpMessagingV2ServiceChannelInvite](docs/IpMessagingV2ServiceChannelInvite.md)
 - [IpMessagingV2ServiceChannelMember](docs/IpMessagingV2ServiceChannelMember.md)
 - [IpMessagingV2ServiceChannelMessage](docs/IpMessagingV2ServiceChannelMessage.md)
 - [IpMessagingV2ServiceRole](docs/IpMessagingV2ServiceRole.md)
 - [IpMessagingV2ServiceUser](docs/IpMessagingV2ServiceUser.md)
 - [IpMessagingV2ServiceUserUserBinding](docs/IpMessagingV2ServiceUserUserBinding.md)
 - [IpMessagingV2ServiceUserUserChannel](docs/IpMessagingV2ServiceUserUserChannel.md)
 - [ListBindingResponse](docs/ListBindingResponse.md)
 - [ListChannelResponse](docs/ListChannelResponse.md)
 - [ListChannelWebhookResponse](docs/ListChannelWebhookResponse.md)
 - [ListCredentialResponse](docs/ListCredentialResponse.md)
 - [ListCredentialResponseMeta](docs/ListCredentialResponseMeta.md)
 - [ListInviteResponse](docs/ListInviteResponse.md)
 - [ListMemberResponse](docs/ListMemberResponse.md)
 - [ListMessageResponse](docs/ListMessageResponse.md)
 - [ListRoleResponse](docs/ListRoleResponse.md)
 - [ListServiceResponse](docs/ListServiceResponse.md)
 - [ListUserBindingResponse](docs/ListUserBindingResponse.md)
 - [ListUserChannelResponse](docs/ListUserChannelResponse.md)
 - [ListUserResponse](docs/ListUserResponse.md)
 - [RoleRoleType](docs/RoleRoleType.md)
 - [UpdateChannelRequest](docs/UpdateChannelRequest.md)
 - [UpdateChannelWebhookRequest](docs/UpdateChannelWebhookRequest.md)
 - [UpdateCredentialRequest](docs/UpdateCredentialRequest.md)
 - [UpdateMemberRequest](docs/UpdateMemberRequest.md)
 - [UpdateMessageRequest](docs/UpdateMessageRequest.md)
 - [UpdateRoleRequest](docs/UpdateRoleRequest.md)
 - [UpdateServiceRequest](docs/UpdateServiceRequest.md)
 - [UpdateUserChannelRequest](docs/UpdateUserChannelRequest.md)
 - [UpdateUserRequest](docs/UpdateUserRequest.md)
 - [UserBindingBindingType](docs/UserBindingBindingType.md)
 - [UserChannelChannelStatus](docs/UserChannelChannelStatus.md)
 - [UserChannelNotificationLevel](docs/UserChannelNotificationLevel.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```


## Author

support@twilio.com

